*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -59,6 +59,7 @@ AGJESE00490=:{0}: Failed to parse job schedule request.
 AGJESE00500=:{0}: Job scheduling ultimately failed. See previous messages.
 AGJESE00510=:{0}: Failed to format datacenter run request.
 AGJESE00520=:{0}: Failed to contact datacenter.
+AGJESE00525=:{0}: Failed to contact registry.
 
 AGJESE00530=:{0}: Job monitoring ultimately failed. See previous messages.
 AGJESE00540=:{0}: Failed to parse job monitoring request.
