*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -86,3 +86,5 @@ AGJESE00800=:{0}: Unable to complete update request.
 
 AGJESE00810=:{0}: Multiple rows encountered on table {1}. This should contain a single row only. 
 AGJESE00820=:{0}: Unexpected SQL error on table {1}.
+
+AGJESE00830=:{0}: Request for Job list for user {1} community {2} ultimately failed. See previous messages.
